<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:elevation="10dp"
            android:text="@string/quiz"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/QBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:elevation="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical"
            android:background="@drawable/simple_white_button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_question"/>

            <TextView
                android:id="@+id/questionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:textSize="16sp"
                android:textColorHint="@android:color/black"
                android:text="@string/question_quiz"
                android:textAlignment="center"/>

            <RadioGroup
                android:id="@+id/groupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/Option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/option_1"
                    android:textSize="16sp"
                    />

                <RadioButton
                    android:id="@+id/Option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/option_2"
                    android:textSize="16sp"
                    />

                <RadioButton
                    android:id="@+id/Option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/option_3"
                    android:textSize="16sp"
                    />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/nextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="23sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />



    </LinearLayout>


</ScrollView>